style.css
/* ... */
@media (max-width: 320px) {

	.mu-single-slide-content-area {
		padding: 2% 0%;
	}

	.mu-filter-item-content {
		padding-top: 24%;
	}
	
	
}

/*To resize recent projects photos*/
.img-responsive
{
	width: 100%;
	height: 250px;
	overflow: hidden;
}

.facebook-area p
{
	color:white;
}

.ordered-list ol li
{
	list-style: square;
}

